--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=64", "setuptools-scm>=8"]
 build-backend = "setuptools.build_meta"
 
 [project.scripts]
-exceltojson = "vbrsupport:exceltojson"
+exceltojson = "exceltojson:_exceltojson"
 
 [project]
 name = "vbrsupport"
