--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,11 @@ authors = [
 ]
 description = "Package grouping functions that I'm using in multiple places"
 requires-python = ">=3.9"
+license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
-    "Operating System :: OS Independent",
+    "Operating System :: Microsoft :: Windows :: Windows 10",
+    "Operating System :: Microsoft :: Windows :: Windows 11",
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers"
 ]
