--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,15 @@ description = "Package grouping functions that I'm using in multiple places"
 requires-python = ">=3.9"
 license = {file = "LICENSE"}
 classifiers = [
-    "Programming Language :: Python :: 3",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "License :: OSI Approved :: MIT License",
     "Operating System :: Microsoft :: Windows :: Windows 10",
     "Operating System :: Microsoft :: Windows :: Windows 11",
     "Development Status :: 3 - Alpha",
