--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,5 +34,14 @@ classifiers = [
     "License :: OSI Approved :: MIT License"
 ]
 
+[project.urls]
+Homepage = "TBD"
+Documentation = "TBD"
+Download = "TBD"
+LocalPyIndex = "TBD"
+Repository = "TBD"
+Issues = "TBD"
+Changelog = "TBD"
+
 [tool.hatch.version]
 path = "src/vbrpytools/__init__.py"
