create publish job

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = ["hatchling",
-            "hatch-pyinstaller>=1.1.0.dev3",
+            "hatch-pyinstaller",
             "hatch-semver"]
 build-backend = "hatchling.build"
 
@@ -45,5 +45,5 @@ Repository = "https://github.com/vbrett/vbrpytools.git"
 Issues = "https://github.com/vbrett/vbrpytools/issues"
 
 [tool.hatch.version]
-path = "src/vbrpytools/__init__.py"
+path = "Src/vbrpytools/__init__.py"
 scheme = "semver"
